# qcodeedit

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md
cmake/: qcodeedit-kateConfig.cmake.in  qcodeeditConfig.cmake.in
demo/: CMakeLists.txt  DemoWindow.cpp  DemoWindow.h  KateXmlReader.cpp  KateXmlReader.h  main.cpp
docs/: API.md  CODE_FOLDING.md  FILLER_LINES.md  SYNTAX_HIGHLIGHTING.md
include/qce/: CodeEdit.h  CodeEditArea.h  FillerLine.h  FillerState.h  FoldRegion.h  FoldState.h  HighlightState.h  IFoldingProvider.h  IHighlighter.h  IMargin.h  ITextDocument.h  LeftRail.h  Rail.h  RightRail.h  RuleBasedFoldingProvider.h  RulesHighlighter.h  SimpleTextDocument.h  StyleSpan.h  TextAttribute.h  TextCursor.h  ViewportState.h
include/qce/margins/: FoldingGutter.h  LineNumberGutter.h
kate/: CMakeLists.txt
kate/include/qce/kate/: KateTheme.h  KateXmlReader.h
kate/src/: KateTheme.cpp  KateXmlReader.cpp
src/: CaretPainter.cpp  CaretPainter.h  CodeEdit.cpp  CodeEditArea.cpp  CursorController.cpp  CursorController.h  EditCommands.cpp  EditCommands.h  FillerState.cpp  FoldState.cpp  FoldingGutter.cpp  ITextDocument.cpp  LineNumberGutter.cpp  LineRenderer.cpp  LineRenderer.h  Rail.cpp  RuleBasedFoldingProvider.cpp  RulesHighlighter.cpp  SimpleTextDocument.cpp  WrapLayout.cpp  WrapLayout.h
tests/: CMakeLists.txt  test_code_edit_area_keys.cpp  test_cursor_controller.cpp  test_filler_state.cpp  test_fold_state.cpp  test_highlighter_integration.cpp  test_kate_xml_reader.cpp  test_line_number_gutter.cpp  test_line_renderer.cpp  test_rule_based_folding.cpp  test_rules_highlighter.cpp  test_simple_document.cpp  test_viewport_state.cpp  test_wrap_layout.cpp
tools/: scan_unknown_attrs.py
